--- a/css/template.css
+++ b/css/template.css
@@ -8,15 +8,101 @@ in your HTML file.
 license: MIT
 author: bootply.com
 */
+@import url(https://fonts.googleapis.com/css?family=Corben);
 
+body{
+  padding-top:210px;
+  position:relative;
+}
 
+/* CUSTOMIZE THE CAROUSEL
+-------------------------------------------------- */
+
+/* Carousel base class */
+.carousel {
+  height: 500px;
+  margin-bottom: 60px;
+  margin-top:60px;
+}
+/* Since positioning the image, we need to help out the caption */
+.carousel-caption {
+  z-index: 10;
+}
+
+/* Declare heights because of positioning of img element */
+.carousel .item {
+  height: 500px;
+  background-color: #777;
+}
+.carousel-inner > .item > img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  
+}
+
+.logo-box{
+  display:inline-block;
+  margin:5px;
+}
+
+.logo{
+  width:100px;
+  height:100px;
+}
+
+.title-box{
+  display:inline-block;
+}
+
+.title{
+  color:#fff;
+  text-align:left;
+  position:relative;
+  top:40px;
+  font-size:4em;
+  font-family:corben;
+}
+
+#header nav {
+  padding: 0 10px;
+  border-top: 1px solid #666461;
+  font-size: 1.4rem;
+  text-transform: uppercase;
+  color: #ffffff;
+  text-align: center;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.16); }
+  #header nav ul {
+  margin: 0;
+  padding: 0; }
+  #header nav li {
+  -webkit-transition: border-color 150ms ease-in;
+  -moz-transition: border-color 150ms ease-in;
+  -ms-transition: border-color 150ms ease-in;
+  -o-transition: border-color 150ms ease-in;
+  transition: border-color 150ms ease-in;
+  display: inline-block;
+  list-style-type: none;
+  margin: 0 20px;
+  border-top: 2px solid #1a1a1a; }
+  #header nav li.active, #header nav li:hover {
+    border-color: #ffbe61; }
+  #header nav li a {
+    display: block;
+    padding: 15px 30px;
+    color: inherit;
+    cursor: pointer; }
+    #header nav li a:hover {
+      color: inherit;
+      text-decoration: none; }
 
 
 .icon-bar {
   background-color:#fff;
 }
 
-.navbar-trans {
+/*.navbar-trans {
   background-color:#279ddd;
     color:#fff;
 }
@@ -34,14 +120,14 @@ author: bootply.com
   outline: 0;
   -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(100,100,100,0.6);
   box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(100,100,100,0.6);
-}
+}*/
 
 .tagline{
   display:block;
-  font-size:0.6em;
+  font-size:0.5em;
 }
 
-.content:before {
+/*.content:before {
   content: "";
   position: fixed;
   left: 0;
@@ -64,19 +150,19 @@ author: bootply.com
   -ms-filter: blur(5px);
   filter: blur(5px);
 }
-
+*/
 .content {
-  color:#fff;
+  color:#000;
   background-color:rgba(255,255,255,0.2);
 }
 
 
-section {
+/*section {
   padding-top:70px;  
   padding-bottom:50px; 
   min-height:calc(100% - 1px);
   
-}
+}*/
 
 .v-center {
     padding-top:10%;
@@ -91,7 +177,19 @@ a.list-group-item.active,[class*='-info'] {
   background-color: #168ccc;
     color:#fff;
 }
-  
+
+.donor-logo{
+  padding:3px;
+}
+
+.donor-logo img{
+  border-radius:7px;
+  width:200px;
+  height:100px;
+  background-color:#ffbe61;
+  text-align:center;
+  vertical-align:center;
+}
 
 footer {
   background-color:#494949;
